# human-centered-dataviz_course

./: Hello.ipynb  README.md  pyproject.toml
tutorial1/: tutorial1.ipynb  tutorial1_empty.ipynb
tutorial2/: tutorial2.ipynb
tutorial3/: tutorial3.ipynb
tutorial4/: tutorial4.ipynb
tutorial5/: tutorial5.ipynb
tutorial6/: country_lookup.csv  tutorial6.ipynb
