[tool.poetry]
name = "dataviz_course_2020"
version = "0.1.0"
description = ""
authors = ["Tim Korjakow <tim.korjakow@campus.tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
altair = "^4.1.0"
jupyterlab = "^2.2.8"
networkx = "^2.5"
nx_altair = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
